# msconsconverter

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Taskfile.yml  Taskfile_windows.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-prod.txt  setup.py  tox.ini
.github/workflows/: publish-to-test-pypi.yml
msconsconverter/: __init__.py  __main__.py  constants.py  directory_helper.py  exceptions.py  functions.py  helpers.py  logger.py  msconsconverter.py  run.bat  run.sh
requirements/: requirements-dev.txt
scripts/: cmdInitiateEnv.bat  cmdStartEnv.bat
taskfiles/: Taskfile_git.yml  Taskfile_pre_commit.yml
tests/: test_basic.py
tests/data/: MSCONS_TL_Multiple_LOC_SAMPLE.txt  MSCONS_TL_SAMPLE01.txt  MSCONS_TL_SAMPLE02.txt
