[project]
name = "msconsconverter"
version = "1.1.1"
authors = [
  { name="vdmitriyev"},
]
description = "Converts MSCONS (EDIFACT) to CSV"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
#dynamic = ["dependencies"]
dependencies = [
    "click >=8.1.7",
	"typer >=0.12.3"
]

[project.urls]
Homepage = "https://github.com/vdmitriyev/msconsconverter"
Issues = "https://github.com/vdmitriyev/msconsconverter/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
include = ["msconsconverter"]
exclude = ["scripts*", "tests*"]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
